[tool.poetry]
name = "repl_python3_Conditionals-Lists-and-Loops"
version = "0.1.0"
description = ""
authors = ["meganlukes1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
split = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
